components/gatekeeper/constraint-required-labels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-app-labels
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    namespaces: ["app"]
  parameters:
    labels:
      - app.kubernetes.io/name
      - app.kubernetes.io/instance
